[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/background/brownn.jpg" type="Texture" id=1]
[ext_resource path="res://src/building/chest/cheset.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5.75, 3 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -128.0
margin_top = -48.0
margin_right = -87.0
margin_bottom = -34.0
text = "woods"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = -128.0
margin_top = -8.0
margin_right = -87.0
margin_bottom = 6.0
text = "stone"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = -128.0
margin_top = 32.0
margin_right = -87.0
margin_bottom = 46.0
text = "grass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stone" type="HSlider" parent="."]
margin_left = -32.0
margin_top = -8.0
margin_right = 104.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="woods" type="HSlider" parent="."]
margin_left = -32.0
margin_top = -48.0
margin_right = 104.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grass" type="HSlider" parent="."]
margin_left = -32.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="store" type="Button" parent="."]
margin_left = -56.0
margin_top = -88.0
margin_right = -8.0
margin_bottom = -68.0
text = "store"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="draw" type="Button" parent="."]
margin_left = 8.0
margin_top = -88.0
margin_right = 56.0
margin_bottom = -68.0
text = "Draw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="woods2" type="Label" parent="."]
margin_left = -80.0
margin_top = -48.0
margin_right = -39.0
margin_bottom = -34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stone2" type="Label" parent="."]
margin_left = -80.0
margin_top = -8.0
margin_right = -39.0
margin_bottom = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grass2" type="Label" parent="."]
margin_left = -80.0
margin_top = 32.0
margin_right = -39.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="woodok" type="Button" parent="."]
margin_left = 144.0
margin_top = -56.0
margin_right = 175.0
margin_bottom = -36.0
disabled = true
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stoneok" type="Button" parent="."]
margin_left = 144.0
margin_top = -16.0
margin_right = 175.0
margin_bottom = 4.0
disabled = true
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grassok" type="Button" parent="."]
margin_left = 144.0
margin_top = 24.0
margin_right = 175.0
margin_bottom = 44.0
disabled = true
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stonevalue" type="Label" parent="."]
margin_left = 104.0
margin_top = -8.0
margin_right = 136.0
margin_bottom = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="grassvalue" type="Label" parent="."]
margin_left = 104.0
margin_top = 32.0
margin_right = 136.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="woodsvalue" type="Label" parent="."]
margin_left = 104.0
margin_top = -48.0
margin_right = 136.0
margin_bottom = -34.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="stone" to="." method="_on_stone_value_changed"]
[connection signal="value_changed" from="woods" to="." method="_on_woods_value_changed"]
[connection signal="value_changed" from="grass" to="." method="_on_grass_value_changed"]
[connection signal="pressed" from="store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="draw" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="woodok" to="." method="_on_woodok_pressed"]
[connection signal="pressed" from="stoneok" to="." method="_on_stoneok_pressed"]
[connection signal="pressed" from="grassok" to="." method="_on_grassok_pressed"]
